# games_analysis

./: .gitignore  0_analysis_RollingRetention.ipynb  1_CohortRetention.ipynb  1_analysis_CohortRetention.ipynb  DEPLOYMENT.md  README.md  README_DASHBOARD.md  analysis.ipynb  app.py  pyproject.toml  railway.json  requirements.txt  run.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
